Update essay content for improved clarity
Refine the text for clarity and completeness in the essay content.

--- a/blog-welt.html
+++ b/blog-welt.html
@@ -151,7 +151,7 @@
     <div class="essay-content">
       
       <p>
-        Der Ausgangspunkt ist ein Experiment: Die Prüfung meines Vorurteils „schlechter Journalismus“ anhand der aktuellen Startseite der Welt und des ersten Artikels, der mir sinnbildlich für die Welt ins Auge fällt. Das Ergebnis bestätigt meinen Verdacht, ist jedoch präziser zu fassen: Das Problem ist nicht die konservative Ausrichtung allein, sondern die systematische Prozesskette von emotionalem Trigger, logischer Verzerrung, politischer Agenda (Campaigning) und der Duldung einer antidemokratischen Echokammer.
+        Der Ausgangspunkt ist ein Experiment: Die Prüfung meines Vorurteils „schlechter Journalismus“ anhand der aktuellen Startseite der Welt und des ersten Artikels, der mir sinnbildlich für die Welt ins Auge fällt. Das Ergebnis bestätigt meinen Verdacht, ist jedoch präziser zu fassen... Das Problem ist nicht die konservative Ausrichtung allein, sondern die systematische Prozesskette von emotionalem Trigger, logischer Verzerrung, politischer Agenda (Campaigning) und der Duldung einer antidemokratischen Echokammer.
       </p>
 
       <h2>1. Der Fall Hoeneß</h2>
